# stock

./: .gitignore  AGENTS.md  CATBOOST_SYSTEM.md  CRONTAB_UPDATE_GUIDE.md  README.md  TASKS.md  backtest_limited_report.md  backtest_patterns.py  backtest_report.md  backtest_report_v2.md  config.ini.example  config.py  cup_god_report_fixed.md  daily_update.py  get_market_data.py  logic.md  main.py  optimization_log.md  pattern_analysis.py  pattern_logic.md  pyproject.toml  run.py
archive/: back_test_gemini.py  back_test_grok.py  debug_twse.py  debug_twse_rows.py  grok_back_final.py  pinescript_match_python.pine  split_history.py
archive/backtest_experiments/: backtest_engine.py
archive/ml_enhanced_experiments/: main_ml.py  (+3 more)
catboost_enhanced/: DESIGN_PLAN.md  daily_ml_scanner.py  weekly_retrain.py
catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
docs/: 01_系統架構.md  02_自動化排程.md  03_型態策略.md  04_基礎策略系統.md  05_ML_Enhanced系統.md  06_CatBoost_Enhanced系統.md  07_回測引擎.md  08_數據管道.md  09_開發指南.md  README.md  backtest_engine.md  backtest_engine_logic.md  hyperparameter_optimization.md  operations.md  optimization_vs_baseline.md  pattern_logic.md  strategy_patterns.md  system_overview.md
ml_enhanced/: CRONTAB_SETUP.md  ML_SYSTEM.md  README.md  daily_ml_scanner.py  weekly_retrain.py
optimization/: backtest_engine_v2.py  market_regime_analysis.py  optimize_hyperparameters.py  parameter_configs.py  pattern_breakout_analyzer.py
screener/: config.py  fetch.py  indicators.py  main.py  rules.py
scripts/: generate_daily_position_report.py  run_backtest.py  run_daily_scan.py  run_historical_analysis.py  update_daily_data.py  update_market_data.py
stock_crawler/: database.py  fetcher.py
strategies/: __init__.py  cup.py  htf.py  vcp.py
(+83 files in other folders)
