[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "twstock (>=1.4.0,<2.0.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
